--- a/a/index.html
+++ b/a/index.html
@@ -5,73 +5,93 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Simple Sidebar - Start Bootstrap Template</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/awesome/css/font-awesome.min.css">
     <link href="css/simple-sidebar.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    <link rel="stylesheet" href="css/panel.css">
 </head>
 
 <body>
-
+<nav class="navbar navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+<a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars"></i></a>
+      </a>
+    </div>
+  </div>
+</nav>
+    
     <div id="wrapper">
-
-        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        Start Bootstrap
-                    </a>
-                </li>
-                <li>
-                    <a href="#">Dashboard</a>
-                </li>
-                <li>
-                    <a href="#">Shortcuts</a>
-                </li>
-                <li>
-                    <a href="#">Overview</a>
-                </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
+                <li class="sidebar-brand"><a href="#">Start Bootstrap</a></li>
+                <li><a href="#"><i class="fa fa-tachometer"></i>Dashboard</a></li>
+                <li><a href="#"><i class="fa fa-industry"></i>Empresas</a></li>
+                <li><a href="#"><i class="fa fa-bar-chart"></i>Históricos</a></li>
+                <li><a href="#"><i class="fa fa-envelope"></i>Contactar Administrador</a></li>
+                <li><a href="#"><i class="fa fa-unlock-alt"></i>Cambiar Contrasena</a></li>
+                <li><a href="#"><i class="fa fa-sign-out"></i>Cerrar Sesion</a></li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper">
+        <div id="page-content-wrapper" style="margin-top: 45px;">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem velit quia quae excepturi incidunt impedit quo natus fuga, doloribus rerum nesciunt, repellat, dolor numquam! Labore laboriosam vero assumenda, corporis officiis.</div>
+                        <div>Obcaecati alias doloremque aliquam tempora voluptates fugiat voluptatem nam excepturi, quam nesciunt dolorem autem quos itaque molestias sapiente suscipit animi laboriosam minima harum. Nulla, placeat, quasi. Explicabo sunt, assumenda a.</div>
+                        <div>Aperiam itaque similique expedita, esse quae praesentium labore, repellat, architecto rem eaque earum suscipit, corporis sint placeat ut quo fuga nisi laudantium ad vitae debitis cum. Sunt animi, labore rerum.</div>
+                        <div>Quisquam aliquam eos aliquid repellat nam minus ducimus incidunt debitis odit, ex, expedita perferendis, maiores labore quibusdam placeat totam non necessitatibus aperiam molestiae? In doloremque, nobis aliquam sunt, doloribus ipsum.</div>
+                        <div>Nemo autem, quibusdam? Voluptatem accusantium excepturi nesciunt, odit esse cumque cum deserunt quisquam, numquam animi repellendus voluptatibus porro eveniet, optio a, expedita nobis non nemo quae rem sequi debitis quis.</div>
+                        <div>Corrupti eum exercitationem non id omnis suscipit ducimus illo dignissimos deserunt explicabo. Iure suscipit a accusamus dolor quaerat atque assumenda consequuntur, cupiditate esse quod possimus, illo dolores quam? Laborum, iusto.</div>
+                        <div>Numquam beatae sequi doloribus id animi ipsum tempora non excepturi nesciunt dolore! Natus amet, expedita adipisci aperiam unde sit itaque autem vel, labore maxime eaque. Possimus molestiae excepturi animi nostrum.</div>
+                        <div>Vero mollitia delectus illum dolor omnis blanditiis reiciendis soluta, autem facere quia ea provident perspiciatis deleniti. Accusamus consequuntur fugiat recusandae, impedit quasi rem possimus, facere ab, dignissimos adipisci in quis.</div>
+                        <div>Quaerat, fuga eos non atque. Perspiciatis debitis itaque cum animi reiciendis inventore alias reprehenderit, repellendus rerum officiis hic sed rem facilis, nulla repudiandae omnis doloribus, libero saepe quod voluptatibus asperiores.</div>
+                        <div>Sit ducimus nobis similique maxime enim doloribus sint explicabo totam quo esse sed at, mollitia consequatur possimus minus impedit repellat saepe necessitatibus tempora neque earum architecto sequi harum! Dignissimos, assumenda.</div>
+                        <div>Ducimus rerum repudiandae inventore qui totam quas tempore, rem ipsa commodi porro atque id ipsum reprehenderit voluptatum natus laboriosam ab vero, alias quaerat eos ea consequatur. Facilis ad nobis exercitationem.</div>
+                        <div>Veritatis corporis sunt illum, minima deserunt a tempore consectetur commodi laboriosam dolorem. Amet quam autem quas consequuntur dolorem blanditiis at dolor ipsam! Expedita consequuntur veniam tenetur amet ea fuga pariatur.</div>
+                        <div>Nihil, vel. Voluptate tempore ducimus nemo, beatae at illum. Distinctio, nam? Distinctio voluptas debitis culpa consectetur provident, quidem aliquid ipsa obcaecati labore? Iste vitae inventore totam qui, omnis, nobis corporis.</div>
+                        <div>Tempora tenetur impedit nam nobis repellat officiis, culpa fugiat hic vel? Fuga quos voluptatum voluptatibus deleniti, adipisci repudiandae, voluptates est molestiae. Aliquam reprehenderit, quod unde necessitatibus suscipit numquam a nemo!</div>
+                        <div>Tempora esse tempore debitis rem ratione eveniet officiis omnis maiores, consequuntur maxime commodi accusantium, hic deleniti dignissimos, impedit? At cumque blanditiis voluptatibus velit omnis nam aliquid officia quaerat tempora, maxime?</div>
+                        <div>Voluptas, doloribus. Vero vitae, praesentium ipsa nostrum et assumenda corporis, quis qui excepturi facilis fugit ipsum itaque, repudiandae perspiciatis provident voluptatum molestias minus voluptates, rerum voluptatibus commodi. Voluptates, aut, aspernatur.</div>
+                        <div>Labore quo sint quidem distinctio, fuga nesciunt incidunt, voluptatibus molestias dolorem voluptas veniam inventore nobis. Esse, debitis. Asperiores, beatae consequuntur corrupti earum itaque. Dolorem aliquid architecto eligendi nisi, impedit optio!</div>
+                        <div>Soluta animi quaerat reprehenderit aspernatur, rem eligendi ipsa in ipsum laborum expedita fugit quidem est minima nisi natus asperiores officia quia repellat dicta, dolorem assumenda fugiat dolores repellendus. Eveniet, odit!</div>
+                        <div>Quasi impedit molestiae repellendus quibusdam quam delectus rem reprehenderit ullam recusandae illo, voluptatum dignissimos, officiis tenetur eos suscipit sint ipsum modi incidunt totam iste autem, consequatur doloremque aliquid obcaecati! Iste!</div>
+                        <div>Fuga rem non nemo repudiandae necessitatibus pariatur voluptates, atque consequuntur aperiam est neque quae nisi illum quos maiores illo officia accusamus quaerat, repellat eos accusantium aliquid dolorem perferendis quidem! Iusto.</div>
+                        <div>Minus magnam neque quae. Totam consequuntur enim est cupiditate hic, eaque obcaecati. Provident id consequuntur suscipit! Voluptates, dolor. Ut aliquid beatae ipsam pariatur veritatis minus natus perferendis vel odio, vitae.</div>
+                        <div>Qui maxime magnam libero, repellendus id facilis, aliquam ipsum assumenda quaerat mollitia harum dolor quibusdam enim nobis. Enim perferendis natus consequuntur, saepe, excepturi ducimus accusamus id consectetur harum facere debitis.</div>
+                        <div>Consequatur nesciunt eligendi sit quo voluptatem, enim aperiam esse eos nemo facere, doloremque sequi! Aliquid labore quas molestiae amet quisquam ullam, quibusdam iure distinctio accusamus eos, natus accusantium rem eligendi.</div>
+                        <div>Aut voluptatem nemo, odio! Sequi dicta illum repellat sapiente, ex amet vero dolore velit? Ipsum tempora dolorem et! Sint quo nemo vel doloribus fugit ullam! Magnam ut nihil exercitationem dolore.</div>
+                        <div>A vitae harum ad sint ipsam recusandae. Minima ea, temporibus magnam quod harum cumque numquam obcaecati, voluptatum omnis vel, qui molestiae perferendis velit repellendus. Neque deserunt, nostrum excepturi sequi dolore?</div>
+                        <div>Itaque nesciunt voluptatem commodi autem quae sequi, excepturi cumque distinctio fugit, ducimus porro optio at sit nihil nulla accusantium necessitatibus aliquid earum, dolor, adipisci ut recusandae doloremque facilis laborum. Ab.</div>
+                        <div>Sit dignissimos, illo optio ad rem pariatur. Dolorum repellendus accusamus vel beatae, ab eveniet minima amet non dolore officiis iure nostrum tempora officia placeat maxime necessitatibus qui est voluptatibus ipsum.</div>
+                        <div>Nostrum delectus, omnis dicta pariatur veritatis eligendi, magni a natus, libero nihil placeat, provident illum non possimus magnam atque maxime labore saepe iste quia nemo quaerat voluptate. Maxime enim, beatae.</div>
+                        <div>Cumque provident odit repellat odio, accusamus adipisci hic. Maiores culpa similique porro minus laudantium voluptatum vero animi, consequuntur quos a id earum sint magnam aspernatur sunt ab asperiores voluptate repellendus.</div>
+                        <div>Dicta voluptate veniam necessitatibus itaque veritatis unde alias! Voluptate ex iusto eius repellat ad, consequuntur asperiores possimus maiores aperiam. Odit doloremque incidunt similique nostrum totam, omnis corrupti perferendis voluptate quisquam?</div>
+                        <div>Cum quos incidunt at, minima et dignissimos aspernatur sint, beatae dolores repellendus esse perspiciatis magni laboriosam sit accusamus asperiores consequuntur ipsa, magnam exercitationem itaque enim alias. Aliquam quisquam laborum, fugiat.</div>
+                        <div>Doloribus eos, omnis est debitis. Dignissimos natus, doloremque vitae facilis ducimus sit assumenda autem nam commodi voluptate ratione! Sapiente commodi mollitia atque rem quidem officia omnis consequatur, nulla autem itaque.</div>
+                        <div>Ut quibusdam ratione explicabo asperiores molestiae deleniti quae, provident voluptas iure accusamus non adipisci maiores voluptatibus dolores similique impedit eos. Eum dicta nobis deserunt esse, earum ratione laborum mollitia cum?</div>
+                        <div>Commodi eveniet consequatur, molestiae distinctio dicta laudantium accusantium. Repellat soluta voluptatum, atque consectetur exercitationem consequatur reprehenderit recusandae est deleniti repellendus accusamus nisi iste assumenda illum repudiandae debitis a similique tempora.</div>
+                        <div>Ratione, id sed tenetur rem alias. Tenetur ipsam, officiis assumenda aliquid odio fugiat rerum ullam commodi beatae nostrum enim debitis, alias voluptatibus fuga in quae sapiente. Illum error impedit quas.</div>
+                        <div>Voluptates mollitia molestiae impedit a tenetur officia, rem architecto minus minima quam quas ad saepe, delectus illo ducimus ut. A sequi eum sunt non deserunt harum molestias eligendi accusamus unde!</div>
+                        <div>Provident ratione quisquam eveniet reiciendis eligendi quos dignissimos exercitationem hic, quae! Architecto autem voluptates, tempora officia explicabo asperiores quisquam nobis commodi amet, enim sit. Enim repudiandae voluptate distinctio harum aut!</div>
+                        <div>Numquam quisquam commodi quo sit veritatis quasi eius, repellendus nihil officiis maiores quos voluptates exercitationem ab atque quia laboriosam quaerat suscipit sunt nesciunt, earum aspernatur. Asperiores obcaecati, rem cum eum?</div>
+                        <div>Cum ex ipsum, corrupti nihil dolore, obcaecati reprehenderit nostrum atque repellat id fugit quo veritatis suscipit nisi nesciunt et quos possimus ducimus illum similique omnis, consequuntur architecto. Optio, perspiciatis, voluptatum.</div>
+                        <div>Expedita nobis ut iste a minus odio deleniti nesciunt recusandae inventore. Veritatis itaque sint dolorum fugit odio vitae minima, consequatur voluptate laudantium, obcaecati quidem, fuga, error earum. Expedita, autem quam!</div>
+                        <div>Ratione tempore recusandae tenetur eaque laudantium quibusdam quos voluptatum qui, totam, laboriosam expedita, ea, incidunt vero similique hic voluptas repellat. Minus quidem architecto aperiam tempora, natus maxime ipsa repudiandae illo.</div>
+                        <div>Inventore nobis consectetur sint laborum, illo magnam, ipsa. Accusamus placeat vero quidem itaque blanditiis nam, esse consectetur, adipisci dolorem optio assumenda, odit numquam eveniet asperiores beatae molestiae deserunt. Tempore, id.</div>
+                        <div>Suscipit fugiat fuga vero soluta obcaecati nam iste exercitationem tempore perspiciatis, incidunt tenetur laboriosam! Enim tenetur, deserunt velit aliquid placeat possimus omnis soluta excepturi sapiente ad, at accusamus nihil necessitatibus!</div>
+                        <div>Reiciendis perspiciatis, maiores adipisci inventore, autem labore exercitationem amet commodi quidem voluptatibus optio aperiam illum ex? Repudiandae soluta sunt recusandae earum, veritatis et, non sapiente aliquid facilis, velit ut voluptatem!</div>
+                        <div>Officia distinctio itaque a adipisci ex quasi, quam beatae in quidem, provident iusto, hic assumenda laboriosam voluptas eligendi nobis mollitia laborum ullam recusandae aliquid natus ducimus delectus dicta atque. Assumenda.</div>
+                        <div>Qui aspernatur odit reiciendis cumque impedit quidem vel deleniti, voluptatum eveniet maiores, saepe veritatis similique dicta esse dolorum culpa harum. Explicabo optio iusto, perferendis? Velit illum facere illo reprehenderit architecto.</div>
+                        <div>Vitae veritatis dolorum, similique ea facere minima, laboriosam voluptatum ut fugiat at quos? Aliquam incidunt odit totam vel recusandae, veniam adipisci magni fuga molestiae? Architecto tenetur pariatur vero eos inventore.</div>
+                        <div>Quas a possimus numquam itaque asperiores facilis doloremque nisi eum id, ducimus ratione, quam eius voluptatem cumque accusamus commodi aut odio nobis veniam et iure dolor? Vero sunt quia laudantium!</div>
+                        <div>Dignissimos rerum quia facilis iusto ullam asperiores, quisquam unde? Dolorem, nemo amet temporibus quibusdam impedit ad debitis esse culpa fuga ea, voluptates, aperiam repellat pariatur cumque sapiente inventore dolore adipisci.</div>
+                        <div>Deserunt reprehenderit ut magni ex error molestias, rerum expedita temporibus! Nemo eveniet velit molestias voluptatum voluptatibus temporibus id omnis aliquam sapiente quo, reiciendis esse in at odit totam dolore vitae.</div>
                     </div>
                 </div>
             </div>
@@ -82,13 +102,19 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
+$(document).ready(function($){
+$(window).resize(function () {
+        if($(window).width() >= 720);
+            console.log($(window).width());
+});
+});  
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
