--- a/a/index.html
+++ b/a/index.html
@@ -27,9 +27,9 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#">Start Bootstrap</a></li>
-                <li><a href="#"><i class="fa fa-tachometer"></i>Dashboard</a></li>
-                <li><a href="#"><i class="fa fa-industry"></i>Empresas</a></li>
-                <li><a href="#"><i class="fa fa-bar-chart"></i>Históricos</a></li>
+                <li><a href="#" class="baloo"><i class="fa fa-tachometer pull-right"></i>Dashboard</a></li>
+                <li><a href="#" class="mont"><i class="fa fa-industry"></i>Empresas</a></li>
+                <li><a href="#" class="roboto"><i class="fa fa-bar-chart"></i>Históricos</a></li>
                 <li><a href="#"><i class="fa fa-envelope"></i>Contactar Administrador</a></li>
                 <li><a href="#"><i class="fa fa-unlock-alt"></i>Cambiar Contrasena</a></li>
                 <li><a href="#"><i class="fa fa-sign-out"></i>Cerrar Sesion</a></li>
@@ -41,7 +41,7 @@
         <div id="page-content-wrapper" style="margin-top: 45px;">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 baloo">
                         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem velit quia quae excepturi incidunt impedit quo natus fuga, doloribus rerum nesciunt, repellat, dolor numquam! Labore laboriosam vero assumenda, corporis officiis.</div>
                         <div>Obcaecati alias doloremque aliquam tempora voluptates fugiat voluptatem nam excepturi, quam nesciunt dolorem autem quos itaque molestias sapiente suscipit animi laboriosam minima harum. Nulla, placeat, quasi. Explicabo sunt, assumenda a.</div>
                         <div>Aperiam itaque similique expedita, esse quae praesentium labore, repellat, architecto rem eaque earum suscipit, corporis sint placeat ut quo fuga nisi laudantium ad vitae debitis cum. Sunt animi, labore rerum.</div>
