--- a/a/index.html
+++ b/a/index.html
@@ -13,17 +13,9 @@
 </head>
 
 <body>
-<nav class="navbar navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-<a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars"></i></a>
-      </a>
-    </div>
-  </div>
-</nav>
+<nav class="cbarra">Machine Monitors</nav>
     
-    <div id="wrapper">
+    <!--<div id="wrapper">
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#">Start Bootstrap</a></li>
@@ -37,7 +29,7 @@
         </div>
         <!-- /#sidebar-wrapper -->
 
-        <!-- Page Content -->
+        <!-- Page Content
         <div id="page-content-wrapper" style="margin-top: 45px;">
             <div class="container-fluid">
                 <div class="row">
@@ -96,9 +88,8 @@
                 </div>
             </div>
         </div>
-        <!-- /#page-content-wrapper -->
 
-    </div>
+    </div>-->
     <!-- /#wrapper -->
 
     <!-- jQuery -->
