--- a/a/index.html
+++ b/a/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/panel.css">
 </head>
 <body>
-    <div id="bar"><a href="#"><i class="fa fa-bars"></i></a>Machine Monitors</div>
+    <div id="bar"><a href="#"><i class="fa fa-bars"></i></a><p>Machine Monitors</p></div>
     <div id="wrapper">
         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo animi placeat officiis autem adipisci exercitationem ipsa blanditiis ducimus necessitatibus eveniet debitis nostrum expedita velit, non, consequatur saepe dolor, molestiae reiciendis.</div>
         <div>Reiciendis expedita totam facilis, deserunt modi voluptas! Dolore soluta aut quo modi, ut eligendi, porro facere officiis, vero qui quia unde reprehenderit beatae rerum illum libero, error nesciunt id doloremque.</div>
