--- a/a/index.html
+++ b/a/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="css/panel.css">
 </head>
 <body>
-    <div id="bar"><a href="#"><i class="fa fa-bars"></i></a><p>Machine Monitors</p></div>
+    <div id="bar"><a href="#"><i class="fa fa-bars fa-2x"></i></a><p>Machine Monitors</p></div>
     <div id="wrapper">
         <nav>
             <ul>
-                <li id="profile"><i class="fa fa-cogs fa-2x" id="iconProfile"></i><br><span id="titleProfile">Arauco</span><br><span id="nameProfile">pavillanueva@ing.ucsc.cl</span></li>
+                <li id="profile"><i class="fa fa-cogs fa-4x" id="iconProfile"></i><br><span id="titleProfile">Arauco</span><br><span id="nameProfile">pavillanueva@ing.ucsc.cl</span></li>
                 <li><a href="#"><i class="fa fa-tachometer icons"></i>Dashboard</a></li>
                 <li><a href="#"><i class="fa fa-industry icons"></i>Empresas</a></li>
                 <li><a href="#"><i class="fa fa-bar-chart icons"></i>Históricos</a></li>
