--- a/a/index.html
+++ b/a/index.html
@@ -14,17 +14,12 @@
         <nav>
             <ul>
                 <li id="profile"><i class="fa fa-cogs fa-4x" id="iconProfile"></i><br><span id="titleProfile">Arauco</span><br><span id="nameProfile">pavillanueva@ing.ucsc.cl</span></li>
-                <li><a href="#"><i class="fa fa-tachometer icons"></i>Dashboard</a></li>
+                <li><a href="#"><i class="fa fa-tachometer fa-2x icons"></i>Dashboard</a></li>
                 <li><a href="#"><i class="fa fa-industry icons"></i>Empresas</a></li>
                 <li><a href="#"><i class="fa fa-bar-chart icons"></i>Históricos</a></li>
-                <li><a href="#"><i class="fa fa-send icons"></i>Contactar Administrador</a></li>
-                <li><a href="#"><i class="fa fa-unlock icons"></i>Cambiar Contraseña</a></li>
-                <li><a href="#"><i class="fa fa-sign-out icons"></i>Cerrar Sesión</a></li>
-                <li><a href="#"><i class="fa fa-industry icons"></i>Empresas</a></li>
-                <li><a href="#"><i class="fa fa-bar-chart icons"></i>Históricos</a></li>
-                <li><a href="#"><i class="fa fa-send icons"></i>Contactar Administrador</a></li>
-                <li><a href="#"><i class="fa fa-unlock icons"></i>Cambiar Contraseña</a></li>
-                <li><a href="#"><i class="fa fa-sign-out icons"></i>Cerrar Sesión</a></li>
+                <li><a href="#"><i class="fa fa-send icons"></i>Contácto</a></li>
+                <li><a href="#"><i class="fa fa-unlock icons"></i>Contraseña</a></li>
+                <li><a href="#"><i class="fa fa-sign-out icons"></i>Cerrar</a></li>
             </ul>
         </nav>
         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem animi voluptate consequuntur eveniet cumque repudiandae optio nesciunt, amet nisi excepturi assumenda eos tempore labore deleniti voluptatibus accusamus quaerat? Minima, corrupti.</div>
