--- a/a/index.html
+++ b/a/index.html
@@ -24,69 +24,41 @@
             </ul>
         </nav>
         <div id="content">
-            <div class="col-xs-12 col-sm-6 padding">
-                <div class="col-xs-12 titleIndustry a">
-                    <i class="fa fa-industry fa-2x fLeft"></i>
-                    <div class="dropdown fRight">
-                        <div class="divHover" data-toggle="dropdown"><i class="fa fa-ellipsis-v fa-2x"></i></div>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a><i class="fa fa-pencil"></i>editar</a></li>
-                            <li><a><i class="fa fa-remove"></i>remover</a></li>
-                        </ul>
+           <div class="col-xs-12 col-sm-6 card">
+                <div class="col-xs-12 shadow">
+                    <div class="col-xs-12 titleIndustry">
+                        <i class="fa fa-industry fa-2x fLeft cA"></i>
+                        <div class="dropdown fRight">
+                            <div class="divHover" data-toggle="dropdown"><i class="fa fa-ellipsis-v"></i></div>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li><a><i class="fa fa-pencil"></i>editar</a></li>
+                                <li><a><i class="fa fa-remove"></i>remover</a></li>
+                            </ul>
+                        </div>
+                        <span>Servicios Bio Bio</span>
                     </div>
-                    <span>Servicios Bio Bio</span>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
                 </div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
             </div>
-            <div class="col-xs-12 col-sm-6 padding">
-                <div class="col-xs-12 titleIndustry go">
-                    <i class="fa fa-industry fa-2x fLeft"></i>
-                    <div class="dropdown fRight">
-                        <div class="divHover" data-toggle="dropdown"><i class="fa fa-ellipsis-v fa-2x"></i></div>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a><i class="fa fa-pencil"></i>editar</a></li>
-                            <li><a><i class="fa fa-remove"></i>remover</a></li>
-                        </ul>
+            <div class="col-xs-12 col-sm-6 card">
+                <div class="col-xs-12 shadow">
+                    <div class="col-xs-12 titleIndustry">
+                        <i class="fa fa-industry fa-2x fLeft cA"></i>
+                        <div class="dropdown fRight">
+                            <div class="divHover" data-toggle="dropdown"><i class="fa fa-ellipsis-v"></i></div>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li><a><i class="fa fa-pencil"></i>editar</a></li>
+                                <li><a><i class="fa fa-remove"></i>remover</a></li>
+                            </ul>
+                        </div>
+                        <span>Besalco Maquinarias</span>
                     </div>
-                    <span>Servicios Bio Bio</span>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
                 </div>
-                <div class="col-xs-4 tCenter go"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
-                <div class="col-xs-4 tCenter go"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
-                <div class="col-xs-4 tCenter go"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
-            </div>
-            <div class="col-xs-12 col-sm-6 padding">
-                <div class="col-xs-12 titleIndustry a">
-                    <i class="fa fa-industry fa-2x fLeft"></i>
-                    <div class="dropdown fRight">
-                        <div class="divHover" data-toggle="dropdown"><i class="fa fa-ellipsis-v fa-2x"></i></div>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a><i class="fa fa-pencil"></i>editar</a></li>
-                            <li><a><i class="fa fa-remove"></i>remover</a></li>
-                        </ul>
-                    </div>
-                    <span>Servicios Bio Bio</span>
-                </div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
-            </div>
-            <div class="col-xs-12 col-sm-6 padding">
-                <div class="col-xs-12 titleIndustry">
-                    <i class="fa fa-industry fa-2x fLeft"></i>
-                    <div class="dropdown fRight">
-                        <div class="divHover" data-toggle="dropdown"><i class="fa fa-ellipsis-v fa-2x"></i></div>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a><i class="fa fa-pencil"></i>editar</a></li>
-                            <li><a><i class="fa fa-remove"></i>remover</a></li>
-                        </ul>
-                    </div>
-                    <span>Servicios Bio Bio</span>
-                </div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
-                <div class="col-xs-4 tCenter a"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
             </div>
         </div>
     </div>
