--- a/a/index.html
+++ b/a/index.html
@@ -37,9 +37,9 @@
                         </div>
                         <span>Servicios Bio Bio</span>
                     </div>
-                    <div class="col-xs-4 tCenter"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
-                    <div class="col-xs-4 tCenter"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
-                    <div class="col-xs-4 tCenter"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-map fa-2x"></i><br><span>ZONAS</span><br>20</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-truck fa-2x"></i><br><span>MÁQUINAS</span><br>30</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-users  fa-2x"></i><br><span>SUPERVISORES</span><br>10</div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 card">
@@ -55,9 +55,9 @@
                         </div>
                         <span>Besalco Maquinarias</span>
                     </div>
-                    <div class="col-xs-4 tCenter"><i class="fa fa-map fa-2x"></i><br><span>Zonas</span><br>20</div>
-                    <div class="col-xs-4 tCenter"><i class="fa fa-truck fa-2x"></i><br><span>Maquinas</span><br>30</div>
-                    <div class="col-xs-4 tCenter"><i class="fa fa-users  fa-2x"></i><br><span>Supervisores</span><br>10</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-map fa-2x"></i><br><span>ZONAS</span><br>20</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-truck fa-2x"></i><br><span>MÁQUINAS</span><br>30</div>
+                    <div class="col-xs-4 tCenter"><i class="fa fa-users  fa-2x"></i><br><span>SUPERVISORES</span><br>10</div>
                 </div>
             </div>
         </div>
